Fix responsiveness issue with player on mobile

--- a/client/src/style/_Header.scss
+++ b/client/src/style/_Header.scss
@@ -205,7 +205,8 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: $chat-width;
+  width: 100%;
+  max-width: $chat-width;
   height: 100%;
   padding: 0 1rem;
   background: $etikett-black;
